parser.output
Terminals unused in grammar

   TTO
   TSQUOTE
   IS


State 24 conflicts: 3 shift/reduce
State 33 conflicts: 1 shift/reduce
State 36 conflicts: 2 shift/reduce
State 40 conflicts: 7 shift/reduce
State 41 conflicts: 14 shift/reduce
State 42 conflicts: 14 shift/reduce
State 43 conflicts: 14 shift/reduce
State 72 conflicts: 14 shift/reduce
State 73 conflicts: 1 shift/reduce
State 74 conflicts: 1 shift/reduce
State 78 conflicts: 12 shift/reduce
State 84 conflicts: 7 shift/reduce
State 85 conflicts: 7 shift/reduce
State 86 conflicts: 7 shift/reduce
State 87 conflicts: 7 shift/reduce
State 88 conflicts: 7 shift/reduce
State 89 conflicts: 12 shift/reduce
State 90 conflicts: 12 shift/reduce
State 94 conflicts: 14 shift/reduce
State 95 conflicts: 14 shift/reduce
State 109 conflicts: 14 shift/reduce
State 115 conflicts: 14 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmts

    2 stmts: stmt
    3      | stmts stmt

    4 stmt: var_decl
    5     | var_decl_deduce
    6     | func_decl
    7     | class_decl
    8     | conditional
    9     | return
   10     | while
   11     | array_add_element
   12     | expr

   13 block: stmts
   14      | %empty

   15 conditional: TIF expr block TELSE block
   16            | TIF expr block

   17 while: TWHILE expr block TELSE block
   18      | TWHILE expr block

   19 var_decl: ident ident
   20         | ident ident TEQUAL expr

   21 var_decl_deduce: TVAR ident TEQUAL expr

   22 func_decl: TDEF ident TLPAREN func_decl_args TRPAREN TCOLON ident block
   23          | TDEF ident TLPAREN func_decl_args TRPAREN block

   24 func_decl_args: %empty
   25               | var_decl
   26               | func_decl_args TCOMMA var_decl

   27 class_decl: TDEF ident block

   28 ident: TIDENTIFIER
   29      | TIDENTIFIER TDOT TIDENTIFIER

   30 literals: TINTEGER
   31         | TDOUBLE
   32         | TSTR
   33         | TBOOL

   34 return: TRETURN expr
   35       | TRETURN_SIMPLE

   36 expr: ident TEQUAL expr
   37     | ident TLPAREN call_args TRPAREN
   38     | ident
   39     | literals
   40     | boolean_expr
   41     | binop_expr
   42     | unaryop_expr
   43     | TLPAREN expr TRPAREN
   44     | range_expr
   45     | array_expr
   46     | array_access

   47 binop_expr: expr TAND expr
   48           | expr TOR expr
   49           | expr TPLUS expr
   50           | expr TMINUS expr
   51           | expr TMUL expr
   52           | expr TDIV expr

   53 unaryop_expr: TNOT expr

   54 boolean_expr: expr comparison expr

   55 call_args: %empty
   56          | expr
   57          | call_args TCOMMA expr

   58 comparison: TCEQ
   59           | TCNE
   60           | TCLT
   61           | TCLE
   62           | TCGT
   63           | TCGE

   64 array_elemets_expr: %empty
   65                   | expr
   66                   | array_elemets_expr TCOMMA expr

   67 array_expr: TLBRACKET array_elemets_expr TRBRACKET

   68 array_add_element: ident TLTLT expr

   69 array_access: ident TLBRACKET TINTEGER TRBRACKET
   70             | array_access TLBRACKET TINTEGER TRBRACKET

   71 range_expr: TLBRACKET expr TRANGE expr TRBRACKET


Terminals, with rules where they appear

$end (0) 0
error (256)
TIDENTIFIER (258) 28 29
TINTEGER (259) 30 69 70
TDOUBLE (260) 31
TSTR (261) 32
TBOOL (262) 33
TCEQ (263) 58
TCNE (264) 59
TCLT (265) 60
TCLE (266) 61
TCGT (267) 62
TCGE (268) 63
TEQUAL (269) 20 21 36
TLTLT (270) 68
TCOMMA (271) 26 57 66
TDOT (272) 29
TCOLON (273) 22
TRANGE (274) 71
TLPAREN (275) 22 23 37 43
TRPAREN (276) 22 23 37 43
TLBRACKET (277) 67 69 70 71
TRBRACKET (278) 67 69 70 71
TPLUS (279) 49
TMINUS (280) 50
TMUL (281) 51
TDIV (282) 52
TNOT (283) 53
TAND (284) 47
TOR (285) 48
TIF (286) 15 16
TELSE (287) 15 17
TWHILE (288) 17 18
TTO (289)
TSQUOTE (290)
TDEF (291) 22 23 27
TRETURN (292) 34
TRETURN_SIMPLE (293) 35
TVAR (294) 21
IS (295)


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
program (42)
    on left: 1, on right: 0
stmts (43)
    on left: 2 3, on right: 1 3 13
stmt (44)
    on left: 4 5 6 7 8 9 10 11 12, on right: 2 3
block (45)
    on left: 13 14, on right: 15 16 17 18 22 23 27
conditional (46)
    on left: 15 16, on right: 8
while (47)
    on left: 17 18, on right: 10
var_decl (48)
    on left: 19 20, on right: 4 25 26
var_decl_deduce (49)
    on left: 21, on right: 5
func_decl (50)
    on left: 22 23, on right: 6
func_decl_args (51)
    on left: 24 25 26, on right: 22 23 26
class_decl (52)
    on left: 27, on right: 7
ident (53)
    on left: 28 29, on right: 19 20 21 22 23 27 36 37 38 68 69
literals (54)
    on left: 30 31 32 33, on right: 39
return (55)
    on left: 34 35, on right: 9
expr (56)
    on left: 36 37 38 39 40 41 42 43 44 45 46, on right: 12 15 16 17
    18 20 21 34 36 43 47 48 49 50 51 52 53 54 56 57 65 66 68 71
binop_expr (57)
    on left: 47 48 49 50 51 52, on right: 41
unaryop_expr (58)
    on left: 53, on right: 42
boolean_expr (59)
    on left: 54, on right: 40
call_args (60)
    on left: 55 56 57, on right: 37 57
comparison (61)
    on left: 58 59 60 61 62 63, on right: 54
array_elemets_expr (62)
    on left: 64 65 66, on right: 66 67
array_expr (63)
    on left: 67, on right: 45
array_add_element (64)
    on left: 68, on right: 11
array_access (65)
    on left: 69 70, on right: 46 70
range_expr (66)
    on left: 71, on right: 44


State 0

    0 $accept: . program $end

    TIDENTIFIER     shift, and go to state 1
    TINTEGER        shift, and go to state 2
    TDOUBLE         shift, and go to state 3
    TSTR            shift, and go to state 4
    TBOOL           shift, and go to state 5
    TLPAREN         shift, and go to state 6
    TLBRACKET       shift, and go to state 7
    TNOT            shift, and go to state 8
    TIF             shift, and go to state 9
    TWHILE          shift, and go to state 10
    TDEF            shift, and go to state 11
    TRETURN         shift, and go to state 12
    TRETURN_SIMPLE  shift, and go to state 13
    TVAR            shift, and go to state 14

    program            go to state 15
    stmts              go to state 16
    stmt               go to state 17
    conditional        go to state 18
    while              go to state 19
    var_decl           go to state 20
    var_decl_deduce    go to state 21
    func_decl          go to state 22
    class_decl         go to state 23
    ident              go to state 24
    literals           go to state 25
    return             go to state 26
    expr               go to state 27
    binop_expr         go to state 28
    unaryop_expr       go to state 29
    boolean_expr       go to state 30
    array_expr         go to state 31
    array_add_element  go to state 32
    array_access       go to state 33
    range_expr         go to state 34


State 1

   28 ident: TIDENTIFIER .
   29      | TIDENTIFIER . TDOT TIDENTIFIER

    TDOT  shift, and go to state 35

    $default  reduce using rule 28 (ident)


State 2

   30 literals: TINTEGER .

    $default  reduce using rule 30 (literals)


State 3

   31 literals: TDOUBLE .

    $default  reduce using rule 31 (literals)


State 4

   32 literals: TSTR .

    $default  reduce using rule 32 (literals)


State 5

   33 literals: TBOOL .

    $default  reduce using rule 33 (literals)


State 6

   43 expr: TLPAREN . expr TRPAREN

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    ident         go to state 36
    literals      go to state 25
    expr          go to state 37
    binop_expr    go to state 28
    unaryop_expr  go to state 29
    boolean_expr  go to state 30
    array_expr    go to state 31
    array_access  go to state 33
    range_expr    go to state 34


State 7

   67 array_expr: TLBRACKET . array_elemets_expr TRBRACKET
   71 range_expr: TLBRACKET . expr TRANGE expr TRBRACKET

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    $default  reduce using rule 64 (array_elemets_expr)

    ident               go to state 36
    literals            go to state 25
    expr                go to state 38
    binop_expr          go to state 28
    unaryop_expr        go to state 29
    boolean_expr        go to state 30
    array_elemets_expr  go to state 39
    array_expr          go to state 31
    array_access        go to state 33
    range_expr          go to state 34


State 8

   53 unaryop_expr: TNOT . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    ident         go to state 36
    literals      go to state 25
    expr          go to state 40
    binop_expr    go to state 28
    unaryop_expr  go to state 29
    boolean_expr  go to state 30
    array_expr    go to state 31
    array_access  go to state 33
    range_expr    go to state 34


State 9

   15 conditional: TIF . expr block TELSE block
   16            | TIF . expr block

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    ident         go to state 36
    literals      go to state 25
    expr          go to state 41
    binop_expr    go to state 28
    unaryop_expr  go to state 29
    boolean_expr  go to state 30
    array_expr    go to state 31
    array_access  go to state 33
    range_expr    go to state 34


State 10

   17 while: TWHILE . expr block TELSE block
   18      | TWHILE . expr block

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    ident         go to state 36
    literals      go to state 25
    expr          go to state 42
    binop_expr    go to state 28
    unaryop_expr  go to state 29
    boolean_expr  go to state 30
    array_expr    go to state 31
    array_access  go to state 33
    range_expr    go to state 34


State 11

   22 func_decl: TDEF . ident TLPAREN func_decl_args TRPAREN TCOLON ident block
   23          | TDEF . ident TLPAREN func_decl_args TRPAREN block
   27 class_decl: TDEF . ident block

    TIDENTIFIER  shift, and go to state 1

    ident  go to state 43


State 12

   34 return: TRETURN . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    ident         go to state 36
    literals      go to state 25
    expr          go to state 44
    binop_expr    go to state 28
    unaryop_expr  go to state 29
    boolean_expr  go to state 30
    array_expr    go to state 31
    array_access  go to state 33
    range_expr    go to state 34


State 13

   35 return: TRETURN_SIMPLE .

    $default  reduce using rule 35 (return)


State 14

   21 var_decl_deduce: TVAR . ident TEQUAL expr

    TIDENTIFIER  shift, and go to state 1

    ident  go to state 45


State 15

    0 $accept: program . $end

    $end  shift, and go to state 46


State 16

    1 program: stmts .
    3 stmts: stmts . stmt

    TIDENTIFIER     shift, and go to state 1
    TINTEGER        shift, and go to state 2
    TDOUBLE         shift, and go to state 3
    TSTR            shift, and go to state 4
    TBOOL           shift, and go to state 5
    TLPAREN         shift, and go to state 6
    TLBRACKET       shift, and go to state 7
    TNOT            shift, and go to state 8
    TIF             shift, and go to state 9
    TWHILE          shift, and go to state 10
    TDEF            shift, and go to state 11
    TRETURN         shift, and go to state 12
    TRETURN_SIMPLE  shift, and go to state 13
    TVAR            shift, and go to state 14

    $default  reduce using rule 1 (program)

    stmt               go to state 47
    conditional        go to state 18
    while              go to state 19
    var_decl           go to state 20
    var_decl_deduce    go to state 21
    func_decl          go to state 22
    class_decl         go to state 23
    ident              go to state 24
    literals           go to state 25
    return             go to state 26
    expr               go to state 27
    binop_expr         go to state 28
    unaryop_expr       go to state 29
    boolean_expr       go to state 30
    array_expr         go to state 31
    array_add_element  go to state 32
    array_access       go to state 33
    range_expr         go to state 34


State 17

    2 stmts: stmt .

    $default  reduce using rule 2 (stmts)


State 18

    8 stmt: conditional .

    $default  reduce using rule 8 (stmt)


State 19

   10 stmt: while .

    $default  reduce using rule 10 (stmt)


State 20

    4 stmt: var_decl .

    $default  reduce using rule 4 (stmt)


State 21

    5 stmt: var_decl_deduce .

    $default  reduce using rule 5 (stmt)


State 22

    6 stmt: func_decl .

    $default  reduce using rule 6 (stmt)


State 23

    7 stmt: class_decl .

    $default  reduce using rule 7 (stmt)


State 24

   19 var_decl: ident . ident
   20         | ident . ident TEQUAL expr
   36 expr: ident . TEQUAL expr
   37     | ident . TLPAREN call_args TRPAREN
   38     | ident .
   68 array_add_element: ident . TLTLT expr
   69 array_access: ident . TLBRACKET TINTEGER TRBRACKET

    TIDENTIFIER  shift, and go to state 1
    TEQUAL       shift, and go to state 48
    TLTLT        shift, and go to state 49
    TLPAREN      shift, and go to state 50
    TLBRACKET    shift, and go to state 51

    TIDENTIFIER  [reduce using rule 38 (expr)]
    TLPAREN      [reduce using rule 38 (expr)]
    TLBRACKET    [reduce using rule 38 (expr)]
    $default     reduce using rule 38 (expr)

    ident  go to state 52


State 25

   39 expr: literals .

    $default  reduce using rule 39 (expr)


State 26

    9 stmt: return .

    $default  reduce using rule 9 (stmt)


State 27

   12 stmt: expr .
   47 binop_expr: expr . TAND expr
   48           | expr . TOR expr
   49           | expr . TPLUS expr
   50           | expr . TMINUS expr
   51           | expr . TMUL expr
   52           | expr . TDIV expr
   54 boolean_expr: expr . comparison expr

    TCEQ    shift, and go to state 53
    TCNE    shift, and go to state 54
    TCLT    shift, and go to state 55
    TCLE    shift, and go to state 56
    TCGT    shift, and go to state 57
    TCGE    shift, and go to state 58
    TPLUS   shift, and go to state 59
    TMINUS  shift, and go to state 60
    TMUL    shift, and go to state 61
    TDIV    shift, and go to state 62
    TAND    shift, and go to state 63
    TOR     shift, and go to state 64

    $default  reduce using rule 12 (stmt)

    comparison  go to state 65


State 28

   41 expr: binop_expr .

    $default  reduce using rule 41 (expr)


State 29

   42 expr: unaryop_expr .

    $default  reduce using rule 42 (expr)


State 30

   40 expr: boolean_expr .

    $default  reduce using rule 40 (expr)


State 31

   45 expr: array_expr .

    $default  reduce using rule 45 (expr)


State 32

   11 stmt: array_add_element .

    $default  reduce using rule 11 (stmt)


State 33

   46 expr: array_access .
   70 array_access: array_access . TLBRACKET TINTEGER TRBRACKET

    TLBRACKET  shift, and go to state 66

    TLBRACKET  [reduce using rule 46 (expr)]
    $default   reduce using rule 46 (expr)


State 34

   44 expr: range_expr .

    $default  reduce using rule 44 (expr)


State 35

   29 ident: TIDENTIFIER TDOT . TIDENTIFIER

    TIDENTIFIER  shift, and go to state 67


State 36

   36 expr: ident . TEQUAL expr
   37     | ident . TLPAREN call_args TRPAREN
   38     | ident .
   69 array_access: ident . TLBRACKET TINTEGER TRBRACKET

    TEQUAL     shift, and go to state 48
    TLPAREN    shift, and go to state 50
    TLBRACKET  shift, and go to state 51

    TLPAREN    [reduce using rule 38 (expr)]
    TLBRACKET  [reduce using rule 38 (expr)]
    $default   reduce using rule 38 (expr)


State 37

   43 expr: TLPAREN expr . TRPAREN
   47 binop_expr: expr . TAND expr
   48           | expr . TOR expr
   49           | expr . TPLUS expr
   50           | expr . TMINUS expr
   51           | expr . TMUL expr
   52           | expr . TDIV expr
   54 boolean_expr: expr . comparison expr

    TCEQ     shift, and go to state 53
    TCNE     shift, and go to state 54
    TCLT     shift, and go to state 55
    TCLE     shift, and go to state 56
    TCGT     shift, and go to state 57
    TCGE     shift, and go to state 58
    TRPAREN  shift, and go to state 68
    TPLUS    shift, and go to state 59
    TMINUS   shift, and go to state 60
    TMUL     shift, and go to state 61
    TDIV     shift, and go to state 62
    TAND     shift, and go to state 63
    TOR      shift, and go to state 64

    comparison  go to state 65


State 38

   47 binop_expr: expr . TAND expr
   48           | expr . TOR expr
   49           | expr . TPLUS expr
   50           | expr . TMINUS expr
   51           | expr . TMUL expr
   52           | expr . TDIV expr
   54 boolean_expr: expr . comparison expr
   65 array_elemets_expr: expr .
   71 range_expr: TLBRACKET expr . TRANGE expr TRBRACKET

    TCEQ    shift, and go to state 53
    TCNE    shift, and go to state 54
    TCLT    shift, and go to state 55
    TCLE    shift, and go to state 56
    TCGT    shift, and go to state 57
    TCGE    shift, and go to state 58
    TRANGE  shift, and go to state 69
    TPLUS   shift, and go to state 59
    TMINUS  shift, and go to state 60
    TMUL    shift, and go to state 61
    TDIV    shift, and go to state 62
    TAND    shift, and go to state 63
    TOR     shift, and go to state 64

    $default  reduce using rule 65 (array_elemets_expr)

    comparison  go to state 65


State 39

   66 array_elemets_expr: array_elemets_expr . TCOMMA expr
   67 array_expr: TLBRACKET array_elemets_expr . TRBRACKET

    TCOMMA     shift, and go to state 70
    TRBRACKET  shift, and go to state 71


State 40

   47 binop_expr: expr . TAND expr
   48           | expr . TOR expr
   49           | expr . TPLUS expr
   50           | expr . TMINUS expr
   51           | expr . TMUL expr
   52           | expr . TDIV expr
   53 unaryop_expr: TNOT expr .
   54 boolean_expr: expr . comparison expr

    TCEQ  shift, and go to state 53
    TCNE  shift, and go to state 54
    TCLT  shift, and go to state 55
    TCLE  shift, and go to state 56
    TCGT  shift, and go to state 57
    TCGE  shift, and go to state 58
    TOR   shift, and go to state 64

    TCEQ      [reduce using rule 53 (unaryop_expr)]
    TCNE      [reduce using rule 53 (unaryop_expr)]
    TCLT      [reduce using rule 53 (unaryop_expr)]
    TCLE      [reduce using rule 53 (unaryop_expr)]
    TCGT      [reduce using rule 53 (unaryop_expr)]
    TCGE      [reduce using rule 53 (unaryop_expr)]
    TOR       [reduce using rule 53 (unaryop_expr)]
    $default  reduce using rule 53 (unaryop_expr)

    comparison  go to state 65


State 41

   15 conditional: TIF expr . block TELSE block
   16            | TIF expr . block
   47 binop_expr: expr . TAND expr
   48           | expr . TOR expr
   49           | expr . TPLUS expr
   50           | expr . TMINUS expr
   51           | expr . TMUL expr
   52           | expr . TDIV expr
   54 boolean_expr: expr . comparison expr

    TIDENTIFIER     shift, and go to state 1
    TINTEGER        shift, and go to state 2
    TDOUBLE         shift, and go to state 3
    TSTR            shift, and go to state 4
    TBOOL           shift, and go to state 5
    TCEQ            shift, and go to state 53
    TCNE            shift, and go to state 54
    TCLT            shift, and go to state 55
    TCLE            shift, and go to state 56
    TCGT            shift, and go to state 57
    TCGE            shift, and go to state 58
    TLPAREN         shift, and go to state 6
    TLBRACKET       shift, and go to state 7
    TPLUS           shift, and go to state 59
    TMINUS          shift, and go to state 60
    TMUL            shift, and go to state 61
    TDIV            shift, and go to state 62
    TNOT            shift, and go to state 8
    TAND            shift, and go to state 63
    TOR             shift, and go to state 64
    TIF             shift, and go to state 9
    TWHILE          shift, and go to state 10
    TDEF            shift, and go to state 11
    TRETURN         shift, and go to state 12
    TRETURN_SIMPLE  shift, and go to state 13
    TVAR            shift, and go to state 14

    TIDENTIFIER     [reduce using rule 14 (block)]
    TINTEGER        [reduce using rule 14 (block)]
    TDOUBLE         [reduce using rule 14 (block)]
    TSTR            [reduce using rule 14 (block)]
    TBOOL           [reduce using rule 14 (block)]
    TLPAREN         [reduce using rule 14 (block)]
    TLBRACKET       [reduce using rule 14 (block)]
    TNOT            [reduce using rule 14 (block)]
    TIF             [reduce using rule 14 (block)]
    TWHILE          [reduce using rule 14 (block)]
    TDEF            [reduce using rule 14 (block)]
    TRETURN         [reduce using rule 14 (block)]
    TRETURN_SIMPLE  [reduce using rule 14 (block)]
    TVAR            [reduce using rule 14 (block)]
    $default        reduce using rule 14 (block)

    stmts              go to state 72
    stmt               go to state 17
    block              go to state 73
    conditional        go to state 18
    while              go to state 19
    var_decl           go to state 20
    var_decl_deduce    go to state 21
    func_decl          go to state 22
    class_decl         go to state 23
    ident              go to state 24
    literals           go to state 25
    return             go to state 26
    expr               go to state 27
    binop_expr         go to state 28
    unaryop_expr       go to state 29
    boolean_expr       go to state 30
    comparison         go to state 65
    array_expr         go to state 31
    array_add_element  go to state 32
    array_access       go to state 33
    range_expr         go to state 34


State 42

   17 while: TWHILE expr . block TELSE block
   18      | TWHILE expr . block
   47 binop_expr: expr . TAND expr
   48           | expr . TOR expr
   49           | expr . TPLUS expr
   50           | expr . TMINUS expr
   51           | expr . TMUL expr
   52           | expr . TDIV expr
   54 boolean_expr: expr . comparison expr

    TIDENTIFIER     shift, and go to state 1
    TINTEGER        shift, and go to state 2
    TDOUBLE         shift, and go to state 3
    TSTR            shift, and go to state 4
    TBOOL           shift, and go to state 5
    TCEQ            shift, and go to state 53
    TCNE            shift, and go to state 54
    TCLT            shift, and go to state 55
    TCLE            shift, and go to state 56
    TCGT            shift, and go to state 57
    TCGE            shift, and go to state 58
    TLPAREN         shift, and go to state 6
    TLBRACKET       shift, and go to state 7
    TPLUS           shift, and go to state 59
    TMINUS          shift, and go to state 60
    TMUL            shift, and go to state 61
    TDIV            shift, and go to state 62
    TNOT            shift, and go to state 8
    TAND            shift, and go to state 63
    TOR             shift, and go to state 64
    TIF             shift, and go to state 9
    TWHILE          shift, and go to state 10
    TDEF            shift, and go to state 11
    TRETURN         shift, and go to state 12
    TRETURN_SIMPLE  shift, and go to state 13
    TVAR            shift, and go to state 14

    TIDENTIFIER     [reduce using rule 14 (block)]
    TINTEGER        [reduce using rule 14 (block)]
    TDOUBLE         [reduce using rule 14 (block)]
    TSTR            [reduce using rule 14 (block)]
    TBOOL           [reduce using rule 14 (block)]
    TLPAREN         [reduce using rule 14 (block)]
    TLBRACKET       [reduce using rule 14 (block)]
    TNOT            [reduce using rule 14 (block)]
    TIF             [reduce using rule 14 (block)]
    TWHILE          [reduce using rule 14 (block)]
    TDEF            [reduce using rule 14 (block)]
    TRETURN         [reduce using rule 14 (block)]
    TRETURN_SIMPLE  [reduce using rule 14 (block)]
    TVAR            [reduce using rule 14 (block)]
    $default        reduce using rule 14 (block)

    stmts              go to state 72
    stmt               go to state 17
    block              go to state 74
    conditional        go to state 18
    while              go to state 19
    var_decl           go to state 20
    var_decl_deduce    go to state 21
    func_decl          go to state 22
    class_decl         go to state 23
    ident              go to state 24
    literals           go to state 25
    return             go to state 26
    expr               go to state 27
    binop_expr         go to state 28
    unaryop_expr       go to state 29
    boolean_expr       go to state 30
    comparison         go to state 65
    array_expr         go to state 31
    array_add_element  go to state 32
    array_access       go to state 33
    range_expr         go to state 34


State 43

   22 func_decl: TDEF ident . TLPAREN func_decl_args TRPAREN TCOLON ident block
   23          | TDEF ident . TLPAREN func_decl_args TRPAREN block
   27 class_decl: TDEF ident . block

    TIDENTIFIER     shift, and go to state 1
    TINTEGER        shift, and go to state 2
    TDOUBLE         shift, and go to state 3
    TSTR            shift, and go to state 4
    TBOOL           shift, and go to state 5
    TLPAREN         shift, and go to state 75
    TLBRACKET       shift, and go to state 7
    TNOT            shift, and go to state 8
    TIF             shift, and go to state 9
    TWHILE          shift, and go to state 10
    TDEF            shift, and go to state 11
    TRETURN         shift, and go to state 12
    TRETURN_SIMPLE  shift, and go to state 13
    TVAR            shift, and go to state 14

    TIDENTIFIER     [reduce using rule 14 (block)]
    TINTEGER        [reduce using rule 14 (block)]
    TDOUBLE         [reduce using rule 14 (block)]
    TSTR            [reduce using rule 14 (block)]
    TBOOL           [reduce using rule 14 (block)]
    TLPAREN         [reduce using rule 14 (block)]
    TLBRACKET       [reduce using rule 14 (block)]
    TNOT            [reduce using rule 14 (block)]
    TIF             [reduce using rule 14 (block)]
    TWHILE          [reduce using rule 14 (block)]
    TDEF            [reduce using rule 14 (block)]
    TRETURN         [reduce using rule 14 (block)]
    TRETURN_SIMPLE  [reduce using rule 14 (block)]
    TVAR            [reduce using rule 14 (block)]
    $default        reduce using rule 14 (block)

    stmts              go to state 72
    stmt               go to state 17
    block              go to state 76
    conditional        go to state 18
    while              go to state 19
    var_decl           go to state 20
    var_decl_deduce    go to state 21
    func_decl          go to state 22
    class_decl         go to state 23
    ident              go to state 24
    literals           go to state 25
    return             go to state 26
    expr               go to state 27
    binop_expr         go to state 28
    unaryop_expr       go to state 29
    boolean_expr       go to state 30
    array_expr         go to state 31
    array_add_element  go to state 32
    array_access       go to state 33
    range_expr         go to state 34


State 44

   34 return: TRETURN expr .
   47 binop_expr: expr . TAND expr
   48           | expr . TOR expr
   49           | expr . TPLUS expr
   50           | expr . TMINUS expr
   51           | expr . TMUL expr
   52           | expr . TDIV expr
   54 boolean_expr: expr . comparison expr

    TCEQ    shift, and go to state 53
    TCNE    shift, and go to state 54
    TCLT    shift, and go to state 55
    TCLE    shift, and go to state 56
    TCGT    shift, and go to state 57
    TCGE    shift, and go to state 58
    TPLUS   shift, and go to state 59
    TMINUS  shift, and go to state 60
    TMUL    shift, and go to state 61
    TDIV    shift, and go to state 62
    TAND    shift, and go to state 63
    TOR     shift, and go to state 64

    $default  reduce using rule 34 (return)

    comparison  go to state 65


State 45

   21 var_decl_deduce: TVAR ident . TEQUAL expr

    TEQUAL  shift, and go to state 77


State 46

    0 $accept: program $end .

    $default  accept


State 47

    3 stmts: stmts stmt .

    $default  reduce using rule 3 (stmts)


State 48

   36 expr: ident TEQUAL . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    ident         go to state 36
    literals      go to state 25
    expr          go to state 78
    binop_expr    go to state 28
    unaryop_expr  go to state 29
    boolean_expr  go to state 30
    array_expr    go to state 31
    array_access  go to state 33
    range_expr    go to state 34


State 49

   68 array_add_element: ident TLTLT . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    ident         go to state 36
    literals      go to state 25
    expr          go to state 79
    binop_expr    go to state 28
    unaryop_expr  go to state 29
    boolean_expr  go to state 30
    array_expr    go to state 31
    array_access  go to state 33
    range_expr    go to state 34


State 50

   37 expr: ident TLPAREN . call_args TRPAREN

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    $default  reduce using rule 55 (call_args)

    ident         go to state 36
    literals      go to state 25
    expr          go to state 80
    binop_expr    go to state 28
    unaryop_expr  go to state 29
    boolean_expr  go to state 30
    call_args     go to state 81
    array_expr    go to state 31
    array_access  go to state 33
    range_expr    go to state 34


State 51

   69 array_access: ident TLBRACKET . TINTEGER TRBRACKET

    TINTEGER  shift, and go to state 82


State 52

   19 var_decl: ident ident .
   20         | ident ident . TEQUAL expr

    TEQUAL  shift, and go to state 83

    $default  reduce using rule 19 (var_decl)


State 53

   58 comparison: TCEQ .

    $default  reduce using rule 58 (comparison)


State 54

   59 comparison: TCNE .

    $default  reduce using rule 59 (comparison)


State 55

   60 comparison: TCLT .

    $default  reduce using rule 60 (comparison)


State 56

   61 comparison: TCLE .

    $default  reduce using rule 61 (comparison)


State 57

   62 comparison: TCGT .

    $default  reduce using rule 62 (comparison)


State 58

   63 comparison: TCGE .

    $default  reduce using rule 63 (comparison)


State 59

   49 binop_expr: expr TPLUS . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    ident         go to state 36
    literals      go to state 25
    expr          go to state 84
    binop_expr    go to state 28
    unaryop_expr  go to state 29
    boolean_expr  go to state 30
    array_expr    go to state 31
    array_access  go to state 33
    range_expr    go to state 34


State 60

   50 binop_expr: expr TMINUS . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    ident         go to state 36
    literals      go to state 25
    expr          go to state 85
    binop_expr    go to state 28
    unaryop_expr  go to state 29
    boolean_expr  go to state 30
    array_expr    go to state 31
    array_access  go to state 33
    range_expr    go to state 34


State 61

   51 binop_expr: expr TMUL . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8

    ident         go to state 36
    literals      go to state 25
    expr          go to state 86
    binop_expr    go to state 28
    unaryop_expr  go to state 29
    boolean_expr  go to state 30
    array_expr    go to state 31
    array_access  go to state 33
    range_expr    go to state 34


State 62

   52 binop_expr: expr TDIV . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 2
    TDOUBLE      shift, and go to state 3
    TSTR         shift, and go to state 4
    TBOOL        shift, and go to state 5
    TLPAREN      shift, and go to state 6
    TLBRACKET    shift, and go to state 7
    TNOT         shift, and go to state 8
